fix: trix toolbar dark mode styling

--- a/app/assets/stylesheets/actiontext.css
+++ b/app/assets/stylesheets/actiontext.css
@@ -442,3 +442,8 @@ trix-editor .attachment__metadata {
 .trix-content ol, .trix-content ul {
   list-style: revert;
 }
+
+trix-toolbar .trix-button:not(.trix-active) {
+  filter: invert(100%);
+}
+
